--- a/source/css/_media__print.scss
+++ b/source/css/_media__print.scss
@@ -82,7 +82,7 @@ img {
 }
 
 object:after {
-	content: "Flash/видео содержимое. Посетите сайт чтобы просмотреть этот материал.";
+	content: "Flash/video content. Please visit site for this media type.";
 	display: block;
 	font-weight: bold;
 	margin-bottom: 1.5em;
