--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,13 +5,11 @@ asideBlocks:
 - partials/aside-block__nav
 
 ---
-
-<%#= partial "partials/additional/_typography-test" %>
+<%= partial "partials/additional/_block__menu-horiz" %>
+<%= partial "partials/additional/_typography-test" %>
 <%= partial "partials/additional/_block__forms" %>
-<%#= partial "partials/additional/_block__menu-horiz" %>
-<%#= partial "partials/additional/_block__pagination" %>
-<%#= partial "partials/additional/_block__collaps" %>
-<%#= partial "partials/additional/_block__tabs" %>
-<%#= partial "partials/additional/_block__modal" %>
-<%#= partial "partials/additional/_block__filter" %>
-<%#= partial "partials/additional/_block__btn" %>
+<%= partial "partials/additional/_block__pagination" %>
+<%= partial "partials/additional/_block__collaps" %>
+<%= partial "partials/additional/_block__tabs" %>
+<%= partial "partials/additional/_block__modal" %>
+<%= partial "partials/additional/_block__filter" %>
