--- a/source/partials/additional/_block__collaps.erb
+++ b/source/partials/additional/_block__collaps.erb
@@ -5,6 +5,8 @@
 ================================================================================
 %>
 
+<%= javascript_include_tag "additional/collapse" %>
+
 <div class="collapse-content">
 	<div class="collapse-content__item">
 		<section>
