--- a/source/partials/additional/_block__filter.erb
+++ b/source/partials/additional/_block__filter.erb
@@ -5,6 +5,8 @@
 ================================================================================
 %>
 
+<%= javascript_include_tag "additional/filter" %>
+
 <dl class="nav nav_filter">
 	<dt class="nav__title">Filter:</dt>
 	<dd class="nav__item">
