--- a/source/partials/additional/_block__forms.erb
+++ b/source/partials/additional/_block__forms.erb
@@ -165,7 +165,7 @@
 				<label for="thisformname-2__name">
 					<span>User name</span>
 				</label>
-				<input type="text" id="thisformname-2__name" name="thisformname-2__name" autofocus="">
+				<input type="text" id="thisformname-2__name" name="thisformname-2__name">
 			</div>
 			<div class="l-form__row">
 				<label for="thisformname-2__comment">
