--- a/source/partials/additional/_block__tabs.erb
+++ b/source/partials/additional/_block__tabs.erb
@@ -5,6 +5,8 @@
 ================================================================================
 %>
 
+<%= javascript_include_tag "additional/tabs" %>
+
 <div class="content-tabs" role="application">
 	<div class="content-tabs__nav js-tab-ln-wr">
 		<ul class="content-tabs__nav__inner" role="tablist">
