--- a/source/partials/additional/_typography-test.erb
+++ b/source/partials/additional/_typography-test.erb
@@ -7,7 +7,7 @@
 ================================================================================
 %>
 
-<img src="images/example/content-example-img.png" alt="Weiss ver 3.0 St. Bernard" style="margin-bottom: 1em;max-width: 100%;height: auto;" />
+<img src="images/example/content-example-img.png" alt="Weiss ver 3.0 St. Bernard" style="margin-bottom: 1em;max-width: 100%;height: auto;border: 20px solid orangered" />
 <h1>Title 1</h1>
 <p>The Alps are one of the great mountain range systems of Europe stretching approximately 1,200 kilometres (750 mi) across eight Alpine countries from Austria and Slovenia in the east, Switzerland, Liechtenstein, Germany, and France to the west, and Italy and Monaco to the south.[1] The mountains were formed over hundreds of millions of years as the African and Eurasian tectonic plates collided. Extreme shortening caused by the event resulted in marine sedimentary rocks rising by thrusting and folding into high mountain peaks such as Mont Blanc and the Matterhorn. Mont Blanc spans the French–Italian border, and at 4,810.45 m (15,782 ft) is the highest mountain in the Alps. The Alpine region area contains many peaks higher than 4,000 m (13,123 ft), known as the "four-thousanders".</p>
 <p>The altitude and size of the range affects the climate in Europe; in the mountains precipitation levels vary greatly and climatic conditions consist of distinct zones. Wildlife such as ibex live in the higher peaks to elevations of 3,400 m (11,155 ft), and plants such as Edelweiss grow in rocky areas in lower elevations as well as in higher elevations. Evidence of human habitation in the Alps goes back to the Paleolithic era. A mummified man, determined to be 5,000 years old, was discovered on a glacier at the Austrian–Italian border in 1991. By the 6th century BC, the Celtic La Tène culture was well established. Hannibal famously crossed the Alps with a herd of elephants, and the Romans had settlements in the region. In 1800 Napoleon crossed one of the mountain passes with an army of 40,000. The 18th and 19th centuries saw an influx of naturalists, writers, and artists, in particular the Romantics, followed by the golden age of alpinism as mountaineers began to ascend the peaks. In World War II the Third Reich invaded the Alpine countries, with the exception of Switzerland and Liechtenstein; Adolf Hitler kept a base of operation in the Bavarian Alps throughout the war.</p>
@@ -330,6 +330,7 @@
 		</tr>
 	</tbody>
 </table>
+
 <hr>
 <pre>
 And some fixed width text.
@@ -340,8 +341,9 @@ _coverElement.setAttribute('id', 'readable_cover');
 _coverElement.setAttribute('style', 'display: none');
 
 _body.appendChild(_coverElement);
-						</pre>
+</pre>
 <hr>
+
 <dl>
 	<dt>
 		Term
@@ -414,7 +416,7 @@ _body.appendChild(_coverElement);
 			H1
 		</th>
 		<td>
-			&nbsp;
+			false
 		</td>
 		<td>
 			<h1 class="h2">Level1</h1>
@@ -440,7 +442,7 @@ _body.appendChild(_coverElement);
 			<h2 class="h1">Level2</h2>
 		</td>
 		<td>
-			&nbsp;
+			false
 		</td>
 		<td>
 			<h2 class="h3">Level2</h2>
@@ -466,7 +468,7 @@ _body.appendChild(_coverElement);
 			<h3 class="h2">Level3</h3>
 		</td>
 		<td>
-			&nbsp;
+			false
 		</td>
 		<td>
 			<h3 class="h4">Level3</h3>
@@ -492,7 +494,7 @@ _body.appendChild(_coverElement);
 			<h4 class="h3">Level4</h4>
 		</td>
 		<td>
-			&nbsp;
+			false
 		</td>
 		<td>
 			<h4 class="h5">Level4</h4>
@@ -518,7 +520,7 @@ _body.appendChild(_coverElement);
 			<h5 class="h4">Level5</h5>
 		</td>
 		<td>
-			&nbsp;
+			false
 		</td>
 		<td>
 			<h5 class="h6">Level5</h5>
@@ -544,7 +546,7 @@ _body.appendChild(_coverElement);
 			<h6 class="h5">Level6</h6>
 		</td>
 		<td>
-			&nbsp;
+			false
 		</td>
 	</tr>
 </table>
