--- a/source/css/_includes__b.scss
+++ b/source/css/_includes__b.scss
@@ -14,6 +14,7 @@
 .region-beforecontent,
 .region-undercontent {
 	outline: 1px dashed #ccc;
+	overflow: hidden;
 }
 
 ///* ============================================================================
