--- a/source/css/_includes__c.scss
+++ b/source/css/_includes__c.scss
@@ -5,58 +5,21 @@
 		MASTER-CLASSES C
 ============================================================================= */
 
-/* @group width visualizer
-  --------------------------------------------------------------------------- */
-
-.device-visualizer {
-	display: block;
-	position: fixed;
-	top: 0;
-	right: 0;
-	z-index: 999;
-
-	&:after {
-		display: block;
-		padding: 10px;
-		color: #000;
-		text-shadow: 0 0 1px #fff;
-	}
-}
-
-@each $deviceWidth in
-	$media-desktop_wide,
-	$media-desktop,
-	$media-tablet_landscape,
-	$media-tablet_portrait,
-	$media-tablet_small,
-	$media-phone_landscape,
-	$media-phone_portrait {
-
-	@media #{$deviceWidth} {
-		.device-visualizer:after {
-			content: $deviceWidth;
-			background: getRandomColor();
-		}
-	}
-}
-
-/* @end */
-
 /* @group Width targeting hide/show
   --------------------------------------------------------------------------- */
 
-.i-show_480 {
-	display: none !important;
+.i-hide {
+	display: none;
 }
 
-@media #{$media-phone_landscape} {
+@media #{$media-mob-mobile} {
 
-	.i-hide_480 {
-		display: none !important;
+	.i-hide_mobile {
+		display: none;
 	}
 
-	.i-show_480 {
-		display: block !important;
+	.i-show_mobile {
+		display: block;
 	}
 
 }
@@ -68,46 +31,42 @@
 
 .i-show_landscape,
 .i-hide_portrait {
-	display: block !important;
+	display: block;
 }
 
 .i-hide_landscape,
 .i-show_portrait {
-	display: none !important;
+	display: none;
 }
 
 @media #{$media-portrait} {
 	.i-show_landscape,
 	.i-hide_portrait {
-		display: block !important;
+		display: block;
 	}
 	.i-hide_landscape,
 	.i-show_portrait {
-		display: none !important;
+		display: none;
 	}
 }
 
 @media #{$media-landscape} {
 	.i-show_portrait,
 	.i-hide_landscape {
-		display: block !important;
+		display: block;
 	}
 	.i-hide_portrait,
 	.i-show_landscape {
-		display: none !important;
+		display: none;
 	}
 }
 
 /* @end */
 
-/* @group Action Retina
+/* @group HDPI support
   --------------------------------------------------------------------------- */
 
-@media (min--moz-device-pixel-ratio: 1.3),
-(-o-min-device-pixel-ratio: 2.6/2),
-(-webkit-min-device-pixel-ratio: 1.3),
-(min-device-pixel-ratio: 1.3),
-(min-resolution: 1.3dppx) {
+@media #{$media-hdpi} {
 
 }
 
