--- a/source/css/_weiss__config.scss
+++ b/source/css/_weiss__config.scss
@@ -1,6 +1,8 @@
 // Help
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
 
+// Generic font family support (with linux ones)
+
 $sans: Arial, FreeSans, sans-serif;
 $hSans: Verdana, "Bitstream Vera Sans", "DejaVu Sans", sans-serif;
 $hSansCond: Tahoma, Geneva, "DejaVu Sans Condensed", sans-serif;
@@ -64,6 +66,7 @@ $column-width: 4em;
 $gutter-width: 1em;
 $grid-padding: $gutter-width;
 
+// for non-semantic greed - grid-width($n) function
 $gw-column: 4em; // Column Width
 $gw-gutter: 1em; // Gutter Width
 $gw-total: grid-width(12);
@@ -72,12 +75,29 @@ $gw-total: grid-width(12);
 //    Breakpoints
 //=============================================================================
 
-$media-desktop_wide: 'screen and (min-width:1281px)';
-$media-desktop: 'screen and (max-width:1280px)';
-$media-tablet_landscape: 'screen and (max-width:1024px)';
-$media-tablet_portrait: 'screen and (max-width:768px)';
-$media-tablet_small: 'screen and (max-width:600px)';
-$media-phone_landscape: 'screen and (max-width:480px)';
-$media-phone_portrait: 'screen and (max-width:320px)';
-$media-portrait: 'screen and (orientation: portrait)';
-$media-landscape: 'screen and (orientation: landscape)';
+// inheritance from top concept (gracyfull degradation)
+
+// media: Default desktop styles
+$media-grace-tablet: "screen and (max-width:640px)";
+$media-grace-mobile: "screen and (max-width:320px)";
+
+// inheritance from bottom concept (mobile first) !note inheritance order
+
+$media-mob-mobile: "screen and (min-width:0)";
+$media-mob-tablet: "screen and (min-width: 640px)";
+$media-mob-desktop: "screen and (min-width:980px)";
+
+// vacuum concept
+
+$media-vac-desktop: "screen and (min-width: 980px)";
+$media-vac-tablet: "screen and (min-width: 640px) and (max-width: 980px)";
+$media-vac-mobile: "screen and (max-width: 640px)";
+
+// orientation support
+
+$media-portrait: "screen and (orientation: portrait)";
+$media-landscape: "screen and (orientation: landscape)";
+
+// HDPI support
+
+$media-hdpi: "(min--moz-device-pixel-ratio: 1.3),(-webkit-min-device-pixel-ratio: 1.3),(min-device-pixel-ratio: 1.3),(min-resolution: 1.3dppx)";
