--- a/source/css/_includes__a.scss
+++ b/source/css/_includes__a.scss
@@ -2,7 +2,7 @@
 @import "weiss__mixins";
 
 /* ============================================================================
-		MASTER-CLASSES A
+		INCLUDE CLASSES A
 ============================================================================= */
 
 .i-clfx {
