--- a/source/css/_includes__b.scss
+++ b/source/css/_includes__b.scss
@@ -2,7 +2,7 @@
 @import "weiss__mixins";
 
 /* ============================================================================
-		MASTER-CLASSES B
+		INCLUDE CLASSES B
 ============================================================================= */
 
 // Add wireframes to the basic layout elements.
