--- a/source/css/_html__embed.scss
+++ b/source/css/_html__embed.scss
@@ -9,8 +9,6 @@ img {
 	font-size: 1em;
 	color: $baseColor;
 	// alt text style
-	-ms-interpolation-mode: bicubic;
-	// improve IE7's resizing of images http://code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
 
 	a & {
 		border: none;
@@ -18,7 +16,7 @@ img {
 	}
 }
 
-//@media #{$media-tablet_small} {
+//@media #{$media-grace-mobile} {
 //	img, object, embed, video, iframe {
 //		max-width: 100%;
 //		height: auto;
