--- a/source/css/_weiss__config.scss
+++ b/source/css/_weiss__config.scss
@@ -1,9 +1,10 @@
 // Help
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html
 
-// Generic font family support (with linux ones)
+// Generic font family support (with linux substitution)
 
 $sans: Arial, FreeSans, sans-serif;
+$sansCond: "Arial Narrow", "DejaVu Sans Condensed", sans-serif;
 $hSans: Verdana, "Bitstream Vera Sans", "DejaVu Sans", sans-serif;
 $hSansCond: Tahoma, Geneva, "DejaVu Sans Condensed", sans-serif;
 $serif: "Times New Roman", Times, "FreeSerif", "Nimbus Roman No9 L", serif;
@@ -11,7 +12,6 @@ $bSerif: Georgia, "Bitstream Charter", "Century Schoolbook L", serif;
 $aSerif: Palatino, "Palatino Linotype", Palladio, "URW Palladio L", "Book Antiqua", serif;
 $monospSerif: "Courier New", Courier, FreeMono, "Nimbus Mono L", monospace;
 $monospSans: "Lucida Console", Monaco, "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
-$grotCond: "Arial Narrow", "DejaVu Sans Condensed", sans-serif;
 $futura: "FuturaMediumRegular", Futura, "URW Gothic L", Arial, FreeSans, sans-serif;
 
 // ============================================================================
@@ -20,11 +20,11 @@ $futura: "FuturaMediumRegular", Futura, "URW Gothic L", Arial, FreeSans, sans-se
 
 $mainBgColor: #fff;
 $mainFgColor: #ccc;
+
 $baseColor: #434343;
 $accentColor: #078e89;
 $lnColor: #09f;
 $lnHoverColor: lighten($lnColor, 15%);
-$containerWidth: 974px;
 
 // Font configuration
 //  ---------------------------------------------------------------------------
@@ -59,41 +59,46 @@ $h6-font-size: 1 * $base-font-size;
 //    Non-semantic grid support
 //=============================================================================
 
-@import "susy";
+// Susy grid
+// -----------------------------------------------------------------------------
 
-$total-columns: 12;
-$column-width: 4em;
-$gutter-width: 1em;
-$grid-padding: $gutter-width;
+//@import "susy";
+//
+//$total-columns: 12;
+//$column-width: 4em;
+//$gutter-width: 1em;
+//$grid-padding: $gutter-width;
 
-// for non-semantic greed - grid-width($n) function
+// Simple static grid - please see _weiss__mixins.scss : 42
+// -----------------------------------------------------------------------------
+
+// for non-semantic grid - grid-width($n) function
 $gw-column: 4em; // Column Width
 $gw-gutter: 1em; // Gutter Width
-$gw-total: grid-width(12);
 
 // ============================================================================
 //    Breakpoints
 //=============================================================================
 
-// inheritance from top concept (gracyfull degradation)
+// Inheritance from top concept (gracyfull degradation)
 
 // media: Default desktop styles
-$media-grace-tablet: "screen and (max-width:640px)";
-$media-grace-mobile: "screen and (max-width:320px)";
+$media-grace-tablet: "screen and (max-width: 640px)";
+$media-grace-mobile: "screen and (max-width: 320px)";
 
-// inheritance from bottom concept (mobile first) !note inheritance order
+// Inheritance from bottom concept (mobile first) !note inheritance order
 
-$media-mob-mobile: "screen and (min-width:0)";
+$media-mob-mobile: "screen and (min-width: 0)";
 $media-mob-tablet: "screen and (min-width: 640px)";
-$media-mob-desktop: "screen and (min-width:980px)";
+$media-mob-desktop: "screen and (min-width: 980px)";
 
-// vacuum concept
+// Vacuum concept
 
 $media-vac-desktop: "screen and (min-width: 980px)";
 $media-vac-tablet: "screen and (min-width: 640px) and (max-width: 980px)";
 $media-vac-mobile: "screen and (max-width: 640px)";
 
-// orientation support
+// Orientation support
 
 $media-portrait: "screen and (orientation: portrait)";
 $media-landscape: "screen and (orientation: landscape)";
