CHANGED: base structure. Inline core styles. Minor improvs

--- a/source/layouts/main.erb
+++ b/source/layouts/main.erb
@@ -12,43 +12,16 @@
 	<!--<![endif]-->
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=5, IE=8, IE=9, IE=10" />
 
-		<!-- Social meta schema.org -->
-		<meta itemprop="name" content="<%= data.page.title || 'Weiss - blank canvas framework' %>" />
-		<meta itemprop="description" content="" />
-		<meta itemprop="image" content="images/logo.png" />
-		<!-- Social meta schema.org -->
-
-		<!-- Social meta ogp.me -->
-		<meta property="og:type" content="article"> <!-- NB! insert right type  -->
-		<meta property="og:title" content="<%= data.page.title || 'Weiss - blank canvas framework' %>" />
-		<meta property="og:description" content="" />
-		<meta property="og:image" content="images/logo.png" />
-		<meta property="og:site_name" content="">
-		<meta property="article:section" content="">
-		<meta property="article:tag" content="">
-		<!-- Social meta ogp.me -->
-
-		<!-- Social meta twitter card -->
-		<meta name="twitter:card" content="">
-		<meta name="twitter:title" content="<%= data.page.title || 'Weiss - blank canvas framework' %>">
-		<meta name="twitter:description" content="">
-		<meta name="twitter:image" content="images/logo.png">
-		<!--optional-->
-		<meta name="twitter:site" content="@username">
-		<meta name="twitter:site:id" content="Twitter ID">
-		<meta name="twitter:creator" content="@username">
-		<meta name="twitter:creator:id" content="Twitter ID">
-		<!-- Social meta twitter card -->
+		<%= partial "partials/html-header__social" %>
 
 		<title><%= data.page.title || "Weiss - blank canvas framework" %></title>
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 
-		<%= stylesheet_link_tag "style" %>
-		<%= javascript_include_tag "modernizr.custom" %>
+		<%= stylesheet_inline "core-style" %>
 		<%= javascript_include_tag "jquery.min" %>
 
 		<!--[if lt IE 9]>
@@ -118,6 +91,8 @@
 				</a>
 			</div>
 		<![endif]-->
+
+		<%= stylesheet_link_tag "style" %>
 
 		<%= javascript_include_tag "jquery.jstyling.pack" %>
 		<%= javascript_include_tag "jquery.placeholder.min" %>
